# wpbrute-rs

./: Cargo.toml  README.md  passwords.txt
.github/workflows/: rust.yml
src/: main.rs
